# libtimecode

./: .gitignore  ChangeLog  Doxyfile.in  Makefile.am  README.md  annotated.html  build-deb.sh  classes.html  configure.ac  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_f2ae0a23c20f8cc24f5c8dca427d4fdb.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  mainpage_8dox.html  release.sh  struct_timecode-members.html  struct_timecode.html  struct_timecode_date-members.html  struct_timecode_date.html  struct_timecode_rate-members.html  struct_timecode_rate.html  struct_timecode_time-members.html  struct_timecode_time.html  timecode.pc.in  timecode_8h.html  timecode_8h_source.html
debian/: changelog  control  copyright
doc/: Makefile.am  mainpage.dox
doc/man/man3/: timecode.h.3
src/: Makefile.am  timecode.c
src/timecode/: timecode.h
tests/: Makefile.am  tctest.c
